# fileview

./: LICENSE  README.md  pyproject.toml  serve
src/: app.py  render.py  resources.py  watchers.py
templates/: page.html
