[tool.poetry]
name = "fileview"
version = "0.1.0"
description = ""
authors = ["Patrick Ryan <pmr3mh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
watchgod = "^0.7"
pytest = "^6.2.4"
falcon = "^3.0.1"
websockets = "^9.1"
uvicorn = "^0.14.0"
Markdown = "^3.3.4"
beautifulsoup4 = "^4.9.3"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
